--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -11,7 +11,7 @@
 
     <div >
 	<table class="result-table" style="margin: 20px 0; width: 100%; border-collapse: collapse;">
-       {% for choice in question.choice_set.all %}
+       {% for choice in choices %}
 		<tr >
 			<td style="width: 25%;	max-width: 300px; text-align: right;" >{{ choice.choice_text }}</td>
 			<td style="padding: 8px;">
