--- a/polls/templates/partials/header.html
+++ b/polls/templates/partials/header.html
@@ -5,7 +5,7 @@
 <nav class="navbar navbar-inverse ">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'polls:index' %}">Polls</a>
+      <a class="navbar-brand" href="{% url 'polls:index' %}">Polls Testing for chutiyanandam review</a>
     </div>
 
   </div>
